# live

./: .gitignore  CMakeLists.txt  README.md  build.bat
.cache/clangd/index/: main.c.A2310B8C892E0381.idx  print.c.ED82F3615BE6AB67.idx  print.h.9E3F269DA2632B9C.idx
js/: islive.js  live.js  package-lock.json  package.json
js/LOCAL_APPDATA_FONTCONFIG_CACHE/: 105b9c7e6f0a4f82d8c9b6e39c52c6f9-le64.cache-9  188ac73a183f12857f63bb60a4a6d603-le64.cache-9  2300eef321c393bfd76478a5c0e95b23-le64.cache-9  3047814df9a2f067bd2d96a2b9c36e5a-le64.cache-9  32b6488e5b8292a2e95c79d947e009e8-le64.cache-9  3830d5c3ddfd5cd38a049b759396e72e-le64.cache-9  3f7329c5293ffd510edef78f73874cfd-le64.cache-9  4c599c202bc5c08e2d34565a40eac3b2-le64.cache-9  573ec803664ed168555e0e8b6d0f0c7f-le64.cache-9  57e423e26b20ab21d0f2f29c145174c3-le64.cache-9  6333f38776742d18e214673cd2c24e34-le64.cache-9  6cc790b63b123a6a96ee260fcdad32a9-le64.cache-9  707971e003b4ae6c8121c3a920e507f5-le64.cache-9  7f36ed4787cbaeccab45d98b74c3c91f-le64.cache-9  9451a55048e8dbe8633e64d34165fdf2-le64.cache-9  95530828ff6c81d309f8258d8d02a23e-le64.cache-9  9a04f3458e11652314d3177aded2a140-le64.cache-9  9b89f8e3dae116d678bbf48e5f21f69b-le64.cache-9  a0107c79d978dfcc5e42cb1335b71036-le64.cache-9  a4e60e8d1e10d2fdff3fe3037a1845fb-le64.cache-9  bf3b770c553c462765856025a94f1ce6-le64.cache-9  c3bb64600bf7a4aa73b55dc8bb82b27b-le64.cache-9  c855463f699352c367813e37f3f70ea7-le64.cache-9  cabbd14511b9e8a55e92af97fb3a0461-le64.cache-9  d0972c3d32f097851eb916381fc38920-le64.cache-9  d3e5c4ee2ceb1fc347f91d4cefc53bc0-le64.cache-9  d52a8644073d54c13679302ca1180695-le64.cache-9  d82eb4fd963d448e2fcb7d7b793b5df3-le64.cache-9  e13b20fdb08344e0e664864cc2ede53d-le64.cache-9  e174b952f45c81266f2aa6ff2faf8204-le64.cache-9  e52a45a1c8c8fe895fc0fc8c4e6999b8-le64.cache-9  f1f2465696798768e9653f19e17ccdc8-le64.cache-9  f24b2111ab8703b4e963115a8cf14259-le64.cache-9  fe547fea3a41b43a38975d292a2b19c7-le64.cache-9
py/: stream_run.py
src/: main.c  print.c  print.h
